# fastapi-starter

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: items.py  users.py
app/api/v1/schemas/: items.py  users.py
app/core/: config.py  logging.py  security.py
app/db/: base.py  database.py  session.py
app/models/: user.py
app/schemas/: common.py  pagination.py
app/services/: base.py  user.py
app/utils/: exception_handlers.py  exceptions.py
